### 1. 新增设置页面 - 创建了独立的设置窗口，集中管理所有配置项 - 支持配置默认生成算法（secrets/random） - 可自定义默认包含的字符类型（大写字母、小写字母、数字、特殊字符） - 支持开关复制时的高亮效果和气泡提示 ### 2. 改进复制交互体验 - 添加了复制时的文本高亮效果，文本框会快速闪烁主题色 - 实现了气泡提示功能，可在设置中开关 - 高亮颜色可通过配置自定义 ### 3. 优化UI布局 - 将生成算法选择移到设置页面，简化主界面 - 实现种子表达式的条件显示：仅当使用random算法时显示 - 调整了控件布局，使界面更加简洁有序 - 新增了"设置"按钮，方便用户快速访问配置 ### 4. 增强配置管理 - 扩展了配置项，支持更多自定义选项 - 实现了配置的热更新，修改设置后立即生效 - 配置持久化存储，下次启动时自动加载 ### 5. 改进代码结构 - 优化了事件处理逻辑 - 增强了代码的可读性和可维护性 - 确保所有功能正常工作

--- a/data/config.json
+++ b/data/config.json
@@ -1,3 +1,29 @@
 {
-  "local": "chinese"
+    "local": "chinese",
+    "default_math_expression": "math.cos(total_seconds)",
+    "window_title": "安全随机字符串生成器",
+    "version": [
+        1,
+        3,
+        3
+    ],
+    "min_window_size": [
+        400,
+        300
+    ],
+    "default_window_size": [
+        550,
+        400
+    ],
+    "length_min": 1,
+    "length_default": 16,
+    "length_max": 1024,
+    "default_algorithm": "secrets",
+    "default_include_upper": true,
+    "default_include_lower": true,
+    "default_include_number": true,
+    "default_include_special": false,
+    "copy_highlight_enabled": true,
+    "copy_bubble_enabled": true,
+    "copy_highlight_color": "#FFFF99"
 }
